--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,62 @@
+alembic==1.4.2
+  Mako==1.1.3
+    MarkupSafe==1.1.1
+  python-dateutil==2.8.1
+    six==1.14.0
+  python-editor==1.0.4
+  SQLAlchemy==1.3.18
 discord.py==1.5.1
-raygun4py~=4.3.0
-alembic~=1.4.3
-psycopg2-binary
-SQLAlchemy~=1.3.20
-gql~=3.0.0a5
-gql[all]~=3.0.0a5
-PyJWT~=1.7.1
-websockets~=8.1
+  aiohttp==3.6.2
+    async-timeout==3.0.1
+    attrs==19.3.0
+    chardet==3.0.4
+    multidict==4.7.5
+  websockets==8.1
+ffmpeg==1.4
+idna-ssl==1.1.0
+  idna==2.9
+mysql-connector-python==8.0.19
+  dnspython==1.16.0
+  protobuf==3.6.1
+    setuptools==46.3.0
+    six==1.14.0
+pef==1.1.0
+  click==7.1.1
+psycopg2==2.8.5
+PyNaCl==1.3.0
+  cffi==1.14.0
+    pycparser==2.20
+  six==1.14.0
+pytest-asyncio==0.10.0
+  pytest==5.4.1
+    atomicwrites==1.4.0
+    attrs==19.3.0
+    colorama==0.4.3
+    importlib-metadata==1.6.0
+      zipp==3.1.0
+    more-itertools==8.2.0
+    packaging==20.3
+      pyparsing==2.4.7
+      six==1.14.0
+    pluggy==0.13.1
+      importlib-metadata==1.6.0
+        zipp==3.1.0
+    py==1.8.1
+    wcwidth==0.1.9
+raygun4py==4.3.0
+  blinker==1.4
+  jsonpickle==1.3
+  requests==2.23.0
+    certifi==2019.11.28
+    chardet==3.0.4
+    idna==2.9
+    urllib3==1.25.8
+typing-extensions==3.7.4.1
+pytz==2020.1
+pyjwt==1.7.1
+raygun4py==4.3.0
+pytz==2020.1
+PyJWT==1.7.1
+python_dateutil==2.8.1
+gql==3.0.0a5
+gql[all]==3.0.0a5
