Initial commit of rewrite in TS

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,12 @@ workflows:
       - build:
           filters:
             branches:
-              only: main
+              only: master
           context: Docker Hub
       - build_test:
           filters:
             branches:
-              ignore: main
+              ignore: master
 jobs:
   build:
     docker:
