--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "build": "yarn run clean && yarn run gql && npx tsc",
     "gql": "graphql-codegen --config codegen.yml -r dotenv/config",
     "dev": "concurrently \"yarn run devserver\" \"graphql-codegen --config codegen.yml -r dotenv/config --watch\"",
-    "devserver": "ts-node-dev --no-notify --respawn --transpile-only src",
+    "devserver": "DEBUG=showcase* ts-node-dev --no-notify --respawn --transpile-only src",
     "debug": "ts-node-dev --no-notify --respawn src"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.17",
+    "@discordjs/builders": "^0.8.2",
+    "@discordjs/rest": "^0.1.0-canary.0",
     "@graphql-typed-document-node/core": "^3.1.0",
+    "@prisma/client": "3.4.2",
+    "apollo-client": "^2.6.10",
     "class-validator": "^0.12.2",
-    "discord.js": "^12.3.0",
+    "debug": "^4.3.2",
+    "discord-api-types": "^0.24.0",
+    "discord.js": "^13.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
@@ -25,7 +32,9 @@
     "graphql-ws": "^5.1.2",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
+    "prisma": "3.4.2",
     "reflect-metadata": "^0.1.13",
+    "subscriptions-transport-ws": "^0.11.0",
     "ws": "^7.4.6"
   },
   "devDependencies": {
@@ -37,6 +46,7 @@
     "@graphql-codegen/typed-document-node": "^1.18.6",
     "@graphql-codegen/typescript": "^1.22.1",
     "@graphql-codegen/typescript-operations": "^1.18.0",
+    "@types/debug": "^4.1.7",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.0.27",
     "@types/node-fetch": "^2.5.7",
